i understand it now

--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -1,1 +1,10 @@
-hello
+```mermaid
+    sequenceDiagram
+        participant browser
+        participant server
+
+        browser->>server: POST exampleapp/new_note
+        server->>browser: creates note, redirects to og page, wtv.
+
+
+```
